# atmo_challenge

./: kriging.md  pyproject.toml  readme.md  requirements  tasks.md  todo.md
data/: smh_2023_training_set.csv  smh_23-24_humidity_temp.csv  smh_ref_micro_merged.csv
data/intermediary_datasets/: lf_ref_micro_merged_3.csv  lf_ref_micro_merged_4.csv  lf_ref_micro_merged_5.csv  readme.md
data/ready_to_use_datasets/: lesfresnes_all.csv  readme.md  smh.csv
models/: XGB_best_params
notebooks/: AutoencoderNN.ipynb  Data_Variability_Analysis.ipynb  arima.ipynb  decision_tree.ipynb  exploratory_analysis.ipynb  isolation_forest.ipynb  logistic_regression.ipynb  meteorological_data.ipynb
report/: Analysis of Data.docx
src/: feature_engineering.py  seasonality.py
