[tool.poetry]
name = "atmo-challenge"
version = "0.1.0"
description = ""
authors = ["jEx <jules.exbrayat@ensimag-inp.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
matplotlib = "^3.9.2"
requests = "^2.32.3"
pandas = "^2.2.3"
nb-clean = "^4.0.1"
ipykernel = "^6.29.5"
seaborn = "^0.13.2"
statsmodels = "^0.14.4"
scikit-learn = "^1.5.2"
xgboost = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
